# enterprise-agent-demo

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pom.xml
agent/: README.md  pyproject.toml
agent/app/: __init__.py  main.py
agent/app/agent/: __init__.py  events.py  graph.py  model.py  service.py  state.py  thread_id.py  tool_schemas.py
agent/app/api/: __init__.py  chat.py
agent/app/clients/: __init__.py  requirement_client.py
agent/app/core/: __init__.py  config.py  exceptions.py  session_store.py
agent/app/prompts/: __init__.py  requirement_agent.py
agent/app/rag/: __init__.py  document_loader.py  embedding.py  indexer.py  models.py  preview.py  retriever.py  search_preview.py  text_splitter.py  vector_store.py
agent/app/schemas/: __init__.py  chat.py  requirement.py
agent/app/tools/: __init__.py  knowledge_tools.py  requirement_tools.py  result.py
agent/tests/: test_chat_api.py  test_chat_end_to_end.py  test_chat_service.py  test_checkpoint_memory.py  test_health.py  test_knowledge_tools.py  test_rag_document_loader.py  test_rag_embedding.py  test_rag_text_splitter.py  test_rag_vector_retrieval.py  test_requirement_agent.py  test_requirement_client.py  test_requirement_tools.py
backend/: README.md  pom.xml
backend/src/main/resources/: application-mysql.yml  application.yml
docker/mysql/conf.d/: charset.cnf
docs/: README.md  current-flow.md  development-history.md  development-plan.md  feature-ideas.md  requirement-api.md  个人笔记.md
knowledge/raw/: 需求提报及流转相关说明.md
src/main/resources/: application.yaml
(+34 files in other folders)
