[project]
name = "enterprise-support-agent"
version = "0.1.0"
description = "Enterprise support conversational agent service"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.139.0,<0.140.0",
    "uvicorn>=0.51.0,<0.52.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<0.29.0",
    "mypy>=1.18.2,<2.0.0",
    "pytest>=8.4.2,<9.0.0",
    "ruff>=0.12.12,<0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["app", "tests"]
